# sapphire-paratime

./: .gitignore  .prettierrc  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  rust-toolchain.toml
.cargo/: audit.toml
.github/: dependabot.yaml  wait-until-ready.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-audit.yaml  ci-docs.yaml  ci-e2e.yaml  ci-lint.yaml  ci-playwright.yaml  ci-reproducibility.yaml  ci-reproducibility.yml  ci-test-demos.yaml  ci-test-examples.yaml  ci-test-go.yaml  ci-test-js-contracts.yaml  ci-test.yaml  contracts-test.yaml  publish.yaml  release.yaml  release.yml
clients/go/: .golangci.yml  README.md  cipher.go  cipher_test.go  compat.go  compat_test.go  go.mod  go.sum  signed_calls.go  signed_calls_test.go
clients/js/: .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  Makefile  README.md  jest.config.js  jest.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.json
clients/py/: .gitignore  CHANGELOG.md  Makefile  README.md  kat.py  requirements.dev.txt  requirements.txt  setup.py  test.py
contracts/: .gitignore  .prettierignore  .prettierrc  .solhint.json  CHANGELOG.md  Makefile  README.md  book.toml  foundry.toml  hardhat.config.ts  package.json  pnpm-lock.yaml  post-build-doc.sh  tsconfig.json
contracts/contracts/: .soldeerignore  CBOR.sol  CalldataEncryption.sol  ConsensusUtils.sol  DateTime.sol  EIP1559Signer.sol  EIP155Signer.sol  EIP2930Signer.sol  EIPTypes.sol  EthereumUtils.sol  HMAC_sha512_256.sol  LiquidStaking.sol  OPL.sol  RLPWriter.sol  ROFLable.sol  ROFLableUpgradeable.sol  Sapphire.sol  SiweParser.sol  Staking.sol  Subcall.sol  WrappedROSE.sol  hmac_sha512_256.sol
contracts/scripts/: deploy-wrose.ts
contracts/test/: auth.ts  calldata.spec.ts  cbor.spec.ts  cdpk.ts  datetime.ts  eip155.ts  eip1559_2930.ts  gas.ts  hashes.ts  multicall.ts  precompiles.ts  roflable.ts  semantics.ts  signedqueries.ts  signing.ts  siweparser.ts  staking.ts  subcall.ts
docs/: README.mdx  _fetch-cbridge-tokens.py  addresses.md  authentication.md  browser.md  deployment.md  ethereum.mdx  examples.mdx  gasless.md  guide.mdx  network.mdx  precompiles.md  quickstart.mdx  security.md  traceye.mdx  verification.md
docs/develop/: README.mdx  authentication.md  browser.md  concept.mdx  dappwright.md  deployment.md  encrypted-events.mdx  gasless.md  security.md  testing.md
docs/diagrams/: c10l-smart-contract-call.mmd  c10l-smart-contract-tx.mmd  siwe-sapphire-flow.mmd
docs/examples/: README.mdx  encrypted-events.mdx
encrypting-proxy/: Cargo.toml  README.md
encrypting-proxy-runner/src/: ext.rs  main.rs
encrypting-proxy/fuzz/: Cargo.toml
encrypting-proxy/fuzz/fuzz_targets/: handler.rs  session_cipher.rs
encrypting-proxy/proxy/: Cargo.toml
encrypting-proxy/proxy/fuzz/.cargo/: config.toml
encrypting-proxy/proxy/fuzz/fuzz_targets/: session_cipher.rs
encrypting-proxy/proxy/src/: lib.rs  main.rs  sgx.rs
encrypting-proxy/proxy/src/crypto/: mod.rs
encrypting-proxy/proxy/src/server/: mod.rs
encrypting-proxy/proxy/src/server/handler/: error.rs  mod.rs  types.rs
encrypting-proxy/proxy/src/server/handler/tests/: errors.rs  mod.rs  roundtrip.rs
encrypting-proxy/runner/: Cargo.toml
encrypting-proxy/runner/src/: ext.rs  main.rs
encrypting-proxy/src/: acme.rs  attestation.rs  cipher.rs  config.rs  csr.rs  lib.rs  main.rs  sgx.rs
encrypting-proxy/src/acme/: challenge_responder.rs  client.rs  mod.rs
encrypting-proxy/src/acme/client/: mod.rs  types.rs
encrypting-proxy/src/crypto/: cipher.rs
encrypting-proxy/src/server/: mod.rs
encrypting-proxy/src/server/handler/: error.rs  mod.rs  proxy_error.rs  types.rs  upstream.rs
encrypting-proxy/src/server/handler/tests/: errors.rs  mod.rs  proxy.rs  roundtrip.rs
encrypting-proxy/src/tls/: csr.rs  mod.rs
examples/: Makefile
examples/encrypted-events/: .env.example  Makefile  README.md  hardhat.config.ts  package.json
examples/ethersv5-ts-esm/: package.json  tsconfig.json
examples/ethersv6-ts-esm/: package.json  tsconfig.json
examples/favorite-number/: README.md  hardhat.config.js  package.json
examples/foundry/: Makefile  README.md  foundry.toml  src
examples/hardhat/: .gitignore  .prettierrc.cjs  .solhint.json  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/hardhat-boilerplate/: Makefile  README.md  hardhat.config.js  package.json
examples/hardhat-ignition-ethers/: .gitignore  hardhat.config.ts  package.json  tsconfig.json
examples/hardhat-viem/: .gitignore  Makefile  hardhat.config.ts  package.json  tsconfig.json
examples/onchain-signer/: .solhint.json  Makefile  README.md  hardhat.config.ts  package.json
examples/truffle/: README.md  package.json  pnpm-lock.yaml  truffle-config.js
examples/viem/: package.json  tsconfig.json
examples/wagmi/: package.json  vite.config.ts
examples/wagmi-test-utils/: metamask.ts  prewarm-metamask.mjs
examples/wagmi-v1/: .gitignore  package.json
examples/wagmi-v2/: .env  .gitignore  Makefile  README.md  package.json  playwright.config.ts
examples/wagmi-v3/: .env  .gitignore  Makefile  README.md  package.json  playwright.config.ts
examples/web3js-ts-esm/: package.json
graph/: .env.example  Dockerfile  docker-compose.yml  index.js  package.json  pnpm-lock.yaml
hardhat/: package.json
integrations/: Makefile
integrations/foundry/lib/oasisprotocol-sapphire-foundry/precompiles/: Cargo.toml
integrations/foundry/lib/oasisprotocol-sapphire-foundry/precompiles/src/: main.rs
py/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  sapphirepy.html  search.html  searchindex.js
runtime/: Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
runtime/.cargo/: audit.toml
runtime/runtime/: Cargo.toml
runtime/runtime/src/: lib.rs
runtime/src/: lib.rs  main.rs
src/: cipher.rs  config.rs  main.rs  req_tester.rs  server.rs  utils.rs
(+698 files in other folders)
