[package]
name = "sapphire-paratime"
version = "0.8.0-testnet"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.orc.release]
runtime-id = "000000000000000000000000000000000000000000000000f80306c9858e7279"

[package.metadata.orc.test]
runtime-id = "000000000000000000000000000000000000000000000000a6d1e3ebf60dff6c"

[package.metadata.fortanix-sgx]
heap-size = 536870912 # 512 MiB
stack-size = 2097152
threads = 26
debug = false

[dependencies]
keymanager = { git = "https://github.com/oasisprotocol/keymanager-paratime", tag = "v0.5.0-testnet" }

# SDK.
module-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.9.0", package = "oasis-runtime-sdk-evm" }
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.9.0" }

# Third party.
once_cell = "1.8.0"

[profile.release]
codegen-units = 1
lto = "thin"
