[package]
name = "sapphire-encrypting-proxy-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
aesm-client = { version = "0.5.0" , git = "https://github.com/fortanix/rust-sgx", features = ["sgxs"] }
anyhow = "1.0.56"
clap = { version = "~3.1.12", features = ["derive"] } # Unpin when not annoying deprecation warnings.
dcap-ql = { git = "https://github.com/fortanix/rust-sgx" }
enclave-runner = { git = "https://github.com/fortanix/rust-sgx", default-features = false } # Use crates.io when >0.5.0
futures-util = "0.3.21"
pin-project = "1.0.10"
sgx-isa = { version = "0.4.0" , git = "https://github.com/fortanix/rust-sgx" }
sgxs-loaders = { version = "0.3.3", git = "https://github.com/fortanix/rust-sgx" }
tokio = "1.19.2"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["json"] }
