[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_bytes"
path = "src/main.rs"

[[bin]]
name = "x25519_derive"
path = "src/main.rs"

[[bin]]
name = "curve25519_compute_public"
path = "src/main.rs"

[[bin]]
name = "deoxysii_seal"
path = "src/main.rs"

[[bin]]
name = "deoxysii_open"
path = "src/main.rs"

[[bin]]
name = "keypair_generate"
path = "src/main.rs"

[[bin]]
name = "sign"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/main.rs"

[[bin]]
name = "gas_used"
path = "src/main.rs"

[[bin]]
name = "pad_gas"
path = "src/main.rs"

[[bin]]
name = "subcall"
path = "src/main.rs"

[[bin]]
name = "core_calldata_public_key"
path = "src/main.rs"

[[bin]]
name = "core_current_epoch"
path = "src/main.rs"

[[bin]]
name = "rofl_is_authorized_origin"
path = "src/main.rs"

[[bin]]
name = "decode"
path = "src/main.rs"

[dependencies]
ethabi = "18.0"
hex = "0.4"
hmac = "0.12"
once_cell = "1.18"
sha2 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
ed25519-dalek = "2.1.1"
oasis-core-keymanager = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v25.0" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v25.0" }
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag="runtime-sdk/v0.13.0" }
evm = { git = "https://github.com/oasisprotocol/evm", tag = "v0.39.1-oasis" }
oasis_cbor = { version = "0.5.1", package = "oasis-cbor" }

# Temp fix, pin time (and deranged) to earlier version
# TODO: Remove patch once stable oasis-core version is released
# https://github.com/oasisprotocol/oasis-core/pull/6125
[patch.crates-io] 
time = { git = "https://github.com/time-rs/time", tag = "v0.3.36" }

[build]
rustflags = ["-C", "target-feature=+aes,+ssse3"]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))']
rustflags = ["-C", "target-feature=+aes,+ssse3"]
